Organisms and Templates Levels

--- a/about_page.html
+++ b/about_page.html
@@ -1,6 +1,6 @@
 <!-- Khaoula Azdoud-->
-<!-- 09/06/2023-->
-<!-- Assignment 6.3: bioSite: Development-->
+<!-- 09/12/2023-->
+<!-- Assignment 7.2:  Development and GitHub Pages Deployment-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -20,14 +20,22 @@
             <a href="hobbies_page.html">HOBBIES</a>
         </div>
     </header>
-    <div class="aboutme-title">
-    	<h1>HI, I'M TAWFIKE</h1>
-    <div class="aboutme-paragraph">
-    	<p>Text</p>
+    <div class="aboutme-content">
+        <div class="aboutme-title">
+            <h1>HI, I'M TAWFIKE</h1>
+        </div>
+        <div class="aboutme-paragraph">
+            <p>From the Atlas Mountains of Morocco to the<br> swamps of Florida, it's been 20 years since Tawfike<br> Bouyalitene, a 42-year-old dad to three wonderful<br> girls: Sophia, 16; Judy, 5; and little Jana, 3;<br> made the journey from his hometown, Agadir,<br> Morocco, to the United States. It's been a trip filled<br> with changes, tough times, and things he's learned<br> along the way.<br>
+            Tawfike's story starts in Casablanca, Morocco,<br> where he was born. When he was just 6, his family<br> moved to Agadir, a pretty coastal city where he<br> grew up.<br> Life took different turns, and at 22, he started<br> exploring new places.<br>
+            Next, he found himself in Orlando, Florida.<br> Tawfike's adventure began with the Disney cultural<br> program. He represented Morocco in Epcot for a<br> year, bringing a piece of his homeland's charm to<br> the entertainment world. After that, he got into<br> different jobs in the hospitality field. He ended up back at Disney World,<br> 13 years ago working as a waiter.<br>
+            His journey isn't just about serving food; it's about making memories for people <br>from all over the world.<br> Tawfike loves his job because it lets him meet many people and create<br> moments that matter.<br>
+            Tawfike's life is painted with soccer, bike rides, camping trips, and dreams of<br> exploring Greece. He follows a simple rule: "Live and Let Live."<br> It means a lot to him and shows up in the stuff he enjoys, like watching soccer<br> games, which helps him relax and feel happy.</p>
+        </div>
+        <div class="aboutme-picture">
+            <img src="images/aboutMePicture.jpeg" alt="AboutMePicture" align="right">
+        </div>
+        <div class="aboutme-background"></div>
     </div>
-    </div>
-    <div class="aboutme-background"></div>
-    <div class="aboutme-picture"></div>
     <footer>
         <p><a>Copyright &copy; 2023 Tawfike Bouyalitene<br>All Rights Reserved</a></p>
     </footer>
