--- a/hobbies_page.html
+++ b/hobbies_page.html
@@ -1,6 +1,6 @@
 <!-- Khaoula Azdoud-->
-<!-- 09/06/2023-->
-<!-- Assignment 6.3: bioSite: Development-->
+<!-- 09/12/2023-->
+<!-- Assignment 7.2:  Development and GitHub Pages Deployment-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -25,28 +25,28 @@
     </div>
     <div class="cards">
             <div class="card1">
-                <img src="images/avatar.png" alt="Avatar" style="width:100%">
+                <img src="images/hobbie1.png" alt="Hobbie1" style="width:100%">
                 <div class="container">
                 <h4><b>Biking</b></h4>
                 <p>Tawfike's passion for biking began to flourish after he had to stop playing soccer due to surgery. Looking for a new way to stay active and adventurous, he turned to biking and discovered a whole new world on two wheels.</p>
                 </div>
             </div>
             <div class="card2">
-                <img src="images/avatar.png" alt="Avatar" style="width:100%">
+                <img src="images/hobbie2.png" alt="Hobbie2" style="width:100%">
                 <div class="container">
                 <h4><b>Biking</b></h4>
                 <p>Biking isn't just a hobby for Tawfike, it's his favorite hobby. With every turn of the pedal, he finds joy, freedom, and a sense of adventure. This year, he immersed himself even more in his beloved pastime, discovering new paths and creating memories that ride alongside him wherever he goes.</p>
                 </div>
             </div>
             <div class="card3">
-                <img src="images/avatar.png" alt="Avatar" style="width:100%">
+                <img src="images/hobbie3.png" alt="Hobbie3" style="width:100%">
                 <div class="container">
                 <h4><b>Beach Swimming</b></h4>
                 <p>Beach swimming is one of Tawfike's favorite hobbies. He adores the feeling of the waves and the sand under his feet. Whether it's a calm day or a bit wavy, he finds joy and relaxation by the water's edge.</p>
                 </div>
              </div>
             <div class="card4">
-                <img src="images/avatar.png" alt="Avatar" style="width:100%">
+                <img src="images/hobbie4.png" alt="Hobbie4" style="width:100%">
                 <div class="container">
                 <h4><b>Playing cards</b></h4>
                 <p>Playing cards with friends is a hobby that Tawfike absolutely loves. It's a chance for him to have fun, relax, and enjoy good company. This simple yet enjoyable activity brings laughter and makes memories that he cherishes.</p>
