--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Khaoula Azdoud-->
-<!-- 09/06/2023-->
-<!-- Assignment 6.3: bioSite: Development-->
+<!-- 09/12/2023-->
+<!-- Assignment 7.2:  Development and GitHub Pages Deployment-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -21,30 +21,34 @@
         </div>
     </header>
     <div class="titre">
-        <h1>Let's Discover<br>Tawfike Bouyalitene</h1>
+        <h1>Let's Discover</h1>
+        <h1>Tawfike Bouyalitene</h1>
     </div>
-    <div class="homepicture"></div>
+    <div class="homepicture">
+        <img src="images/homePicture.jpeg" alt="HomePicture" style="width:100%">
+    </div>
     <div class="homelink">
         <a href="about_page.html">Learn More About Tawfike...</a>
     </div>
     <div class="social-media">
-        <img src="images/facebook.png" alt="Facebook">
-        <img src="images/linkdin.png" alt="Linkdin">
-        <img src="images/instagram.png" alt="Instagram">
-        <img src="images/twitter.png" alt="Twitter">
+        <a href="../csd-340/index.html"><img src="images/landingPage.png"></a>
+        <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png"></a>
+        <a href="https://www.linkedin.com/in/tawfike-bouyalitene-a48036150/" target="_blank"><img src="images/linkdin.png"></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.png"></a>
+        <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png"></a>
     </div>
     <div class="homecard1">
-        <img src="images/avatar.png" alt="Avatar" style="width:100%">
+        <img src="images/homeCard1.jpeg" alt="HomeCard1" style="width:100%">
         <div class="container">
         <h4><b>Tawfike's Achivement</b></h4>
         <p>Being a big fan of reading, one of Tawfike's goals for 2023 was to read more often, and he successfully achieved that objective this year. His commitment to reading allowed him to delve into new worlds and perspectives, fostering personal growth and intellectual curiosity.</p>
         </div>
     </div>
     <div class="homecard2">
-        <img src="images/avatar.png" alt="Avatar" style="width:100%">
+        <img src="images/homeCard2.jpeg" alt="HomeCard2" style="width:100%">
         <div class="container">
         <h4><b>Personal Accomplishments</b></h4>
-        <p>In 2023, one of Tawfik's goals was to snorkel and explore the underwater world, a goal he proudly achieved. Driven by his deep love for water and the beach, he experienced the beauty of marine life firsthand, making this year a memorable one of his accomplishments.</p>
+        <p>Tawfik is incredibly proud of his 10-year journey with Disney World, where he's contributed to countless magical moments. His commitment to creating happiness has made him a valued part of the Disney family, and he looks forward to many more years of enchanting experiences.</p>
         </div>
     </div>
     <footer>
