--- a/hobbies_page.html
+++ b/hobbies_page.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <div class="hobbies-title">
-    	<h1>Discover Tawfike's World Of Hobbies</h1>
+        <h1>Discover Tawfike's World Of Hobbies</h1>
     </div>
     <div class="cards">
             <div class="card1">
@@ -34,22 +34,22 @@
             <div class="card2">
                 <img src="images/hobbie2.png" alt="Hobbie2" style="width:100%">
                 <div class="container">
-                <h4><b>Biking</b></h4>
-                <p>Biking isn't just a hobby for Tawfike, it's his favorite hobby. With every turn of the pedal, he finds joy, freedom, and a sense of adventure. This year, he immersed himself even more in his beloved pastime, discovering new paths and creating memories that ride alongside him wherever he goes.</p>
-                </div>
-            </div>
-            <div class="card3">
-                <img src="images/hobbie3.png" alt="Hobbie3" style="width:100%">
-                <div class="container">
                 <h4><b>Beach Swimming</b></h4>
                 <p>Beach swimming is one of Tawfike's favorite hobbies. He adores the feeling of the waves and the sand under his feet. Whether it's a calm day or a bit wavy, he finds joy and relaxation by the water's edge.</p>
                 </div>
              </div>
-            <div class="card4">
-                <img src="images/hobbie4.png" alt="Hobbie4" style="width:100%">
+            <div class="card3">
+                <img src="images/hobbie3.png" alt="Hobbie3" style="width:100%">
                 <div class="container">
                 <h4><b>Playing cards</b></h4>
                 <p>Playing cards with friends is a hobby that Tawfike absolutely loves. It's a chance for him to have fun, relax, and enjoy good company. This simple yet enjoyable activity brings laughter and makes memories that he cherishes.</p>
+                </div>
+            </div>
+            <div class="card4">
+                <img src="images/hobbie4.png" alt="Hobbie4" style="width:100%">
+                <div class="container">
+                <h4><b>Riding Two Wheels</b></h4>
+                <p>Biking isn't just a hobby for Tawfike, it's his favorite hobby. With every turn of the pedal, he finds joy, freedom, and a sense of adventure. This year, he immersed himself even more in his beloved pastime, discovering new paths and creating memories.</p>
                 </div>
             </div>
     </div>
