--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>bioSite Home Page</title>
     <link rel="stylesheet" type="text/css" href="site.css">
+    <title>TAWFIKE BOUYALITENE</title>
 </head>
 <body>
     <header>
@@ -20,38 +20,45 @@
             <a href="hobbies_page.html">HOBBIES</a>
         </div>
     </header>
-    <div class="titre">
-        <h1>Let's Discover</h1>
-        <h1>Tawfike Bouyalitene</h1>
-    </div>
-    <div class="homepicture">
-        <img src="images/homePicture.jpeg" alt="HomePicture" style="width:100%">
-    </div>
-    <div class="homelink">
-        <a href="about_page.html">Learn More About Tawfike...</a>
-    </div>
-    <div class="social-media">
-        <a href="../csd-340/index.html"><img src="images/landingPage.png"></a>
-        <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png"></a>
-        <a href="https://www.linkedin.com/in/tawfike-bouyalitene-a48036150/" target="_blank"><img src="images/linkdin.png"></a>
-        <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.png"></a>
-        <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png"></a>
-    </div>
-    <div class="homecard1">
-        <img src="images/homeCard1.jpeg" alt="HomeCard1" style="width:100%">
-        <div class="container">
-        <h4><b>Tawfike's Achivement</b></h4>
-        <p>Being a big fan of reading, one of Tawfike's goals for 2023 was to read more often, and he successfully achieved that objective this year. His commitment to reading allowed him to delve into new worlds and perspectives, fostering personal growth and intellectual curiosity.</p>
+    <div class="home-content">
+        <div class="titre">
+            <h1 style="font-size: 5vw;">Let's Discover</h1>
+            <h1 style="font-size: 5vw;">Tawfike Bouyalitene</h1>
+        </div>
+        <div class="homepicture">
+            <img src="images/homePicture.jpeg" alt="HomePicture" style="width: 100%">
+        </div>
+        <div class="social-media">
+            <a href="../csd-340/index.html"><img src="images/landingPage.png" alt="LandingPage"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/in/tawfike-bouyalitene-a48036150/" target="_blank"><img src="images/linkedin.png" alt="Linkedin"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
+        </div>
+        <div class="homelink">
+            <a href="about_page.html" style="font-size: 2vw;">Learn More About Tawfike...</a>
         </div>
     </div>
-    <div class="homecard2">
-        <img src="images/homeCard2.jpeg" alt="HomeCard2" style="width:100%">
-        <div class="container">
-        <h4><b>Personal Accomplishments</b></h4>
-        <p>Tawfik is incredibly proud of his 10-year journey with Disney World, where he's contributed to countless magical moments. His commitment to creating happiness has made him a valued part of the Disney family, and he looks forward to many more years of enchanting experiences.</p>
+
+    <div class="home1">
+        <div class="homecard1">
+            <img src="images/homeCard1.jpeg" alt="HomeCard1" style="width: 100%">
+            <div class="container">
+                <h4><b>Tawfike's Achievement</b></h4>
+                <p>Being a big fan of reading, one of Tawfike's goals for 2023 was to read more often, and he successfully achieved that objective this year. His commitment to reading allowed him to delve into new worlds and perspectives, fostering personal growth and intellectual curiosity.</p>
+            </div>
         </div>
     </div>
-    <footer>
+    <div class="home2">
+        <div class="homecard2">
+            <img src="images/homeCard2.jpeg" alt="HomeCard2" style="width: 100%">
+            <div class="container">
+                <h4><b>Personal Accomplishments</b></h4>
+                <p>Tawfik is incredibly proud of his 10-year journey with Disney World, where he's contributed to countless magical moments. His commitment to creating happiness has made him a valued part of the Disney family, and he looks forward to many more years of enchanting experiences.</p>
+            </div>
+        </div>
+    </div>
+    <footer id="homeFooter">
         <p><a>Copyright &copy; 2023 Tawfike Bouyalitene<br>All Rights Reserved</a></p>
     </footer>
 </body>
