--- a/hobbies_page.html
+++ b/hobbies_page.html
@@ -21,39 +21,43 @@
         </div>
     </header>
     <div class="hobbies-title">
-        <h1>Discover Tawfike's World Of Hobbies</h1>
+        <h1 style="font-size:3.5vw;">DISCOVER TAWFIKE'S WORLD OF HOBBIES</h1>
     </div>
     <div class="cards">
+        <div class="firstCards">
             <div class="card1">
                 <img src="images/hobbie1.png" alt="Hobbie1" style="width:100%">
                 <div class="container">
-                <h4><b>Biking</b></h4>
-                <p>Tawfike's passion for biking began to flourish after he had to stop playing soccer due to surgery. Looking for a new way to stay active and adventurous, he turned to biking and discovered a whole new world on two wheels.</p>
+                    <h4><b>Biking</b></h4>
+                    <p>Tawfike's passion for biking began to flourish after he had to stop playing soccer due to surgery. Looking for a new way to stay active and adventurous, he turned to biking and discovered a whole new world on two wheels.</p>
                 </div>
             </div>
             <div class="card2">
                 <img src="images/hobbie2.png" alt="Hobbie2" style="width:100%">
                 <div class="container">
-                <h4><b>Beach Swimming</b></h4>
-                <p>Beach swimming is one of Tawfike's favorite hobbies. He adores the feeling of the waves and the sand under his feet. Whether it's a calm day or a bit wavy, he finds joy and relaxation by the water's edge.</p>
+                    <h4><b>Beach Swimming</b></h4>
+                    <p>Beach swimming is one of Tawfike's favorite hobbies. He adores the feeling of the waves and the sand under his feet. Whether it's a calm day or a bit wavy, he finds joy and relaxation by the water's edge.</p>
                 </div>
-             </div>
+            </div>
+        </div>
+        <div class="secondCards">
             <div class="card3">
                 <img src="images/hobbie3.png" alt="Hobbie3" style="width:100%">
                 <div class="container">
-                <h4><b>Playing cards</b></h4>
-                <p>Playing cards with friends is a hobby that Tawfike absolutely loves. It's a chance for him to have fun, relax, and enjoy good company. This simple yet enjoyable activity brings laughter and makes memories that he cherishes.</p>
+                    <h4><b>Playing cards</b></h4>
+                    <p>Playing cards with friends is a hobby that Tawfike absolutely loves. It's a chance for him to have fun, relax, and enjoy good company. This simple yet enjoyable activity brings laughter and makes memories that he cherishes.</p>
                 </div>
             </div>
             <div class="card4">
                 <img src="images/hobbie4.png" alt="Hobbie4" style="width:100%">
                 <div class="container">
-                <h4><b>Riding Two Wheels</b></h4>
-                <p>Biking isn't just a hobby for Tawfike, it's his favorite hobby. With every turn of the pedal, he finds joy, freedom, and a sense of adventure. This year, he immersed himself even more in his beloved pastime, discovering new paths and creating memories.</p>
+                    <h4><b>Riding Two Wheels</b></h4>
+                    <p>Biking isn't just a hobby for Tawfike, it's his favorite hobby. With every turn of the pedal, he finds joy, freedom, and a sense of adventure. This year, he immersed himself even more in his beloved pastime, discovering new paths and creating memories.</p>
                 </div>
             </div>
+        </div>
     </div>
-    <footer>
+    <footer id="hobbiesFooter">
         <p><a>Copyright &copy; 2023 Tawfike Bouyalitene<br>All Rights Reserved</a></p>
     </footer>
 </body>
